--- a/src/App.css
+++ b/src/App.css
@@ -38,16 +38,38 @@
 
 #item{
    margin-top: 5px;
-  width: 40%;
+   width: 40%;
    margin: auto;
-   border-bottom: 1px solid darkgray;
+   border-bottom: 1px solid rgb(221, 216, 216);
    text-align: center;
 
+}
+
+.Header{
+  width: 100%;
+  height: 20%;
+  display:flex;
 }
 
 #GoogleSignIn:hover{
   cursor: pointer;
   transform: scale(1.005);
+}
+
+#GoogleSignIn{
+  position: absolute;
+  right: 1%;
+  top: 0;
+}
+
+#Title{
+  margin: auto;
+}
+
+#UserName{
+  position: absolute;
+  right: 1%;
+  top: 4%;
 }
 
 #WriteButton{
@@ -69,6 +91,9 @@
 
 #ListText{
   height: 100%;
-  background-color: rgb(255, 249, 249);
-  border: 0.5px solid;
+ /* background-color: rgb(255, 249, 249);*/
+  
+  border-bottom: 15% solid black;
+
 }
+
