--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
-
+  
   text-align: center;
+  top: 0;
   
 }
 
@@ -9,6 +10,18 @@
   transform: scale(1.05);
   background-color: rgba(240, 248, 255, 0.815);
   
+}
+
+
+#item{
+  margin-top: 5px;
+  width: 60%;
+  margin: auto;
+  border-bottom: 1px dotted rgb(143, 137, 137);
+  text-align: center;
+  background-color: rgb(243, 234, 223);
+  
+
 }
 
 
@@ -31,24 +44,24 @@
 
 
 
-.list{
+.list-items{
   height: 100%;
+ 
 }
 
-
-#item{
-   margin-top: 5px;
-   width: 40%;
-   margin: auto;
-   border-bottom: 1px solid rgb(221, 216, 216);
-   text-align: center;
-
-}
 
 .Header{
+  margin-top: 15px;
+  margin-bottom: 15px;
   width: 100%;
   height: 20%;
   display:flex;
+}
+
+#GoogleLogo{
+  height: 50px;
+  width: 150px;
+  margin-bottom: -13px;
 }
 
 #GoogleSignIn:hover{
@@ -58,42 +71,45 @@
 
 #GoogleSignIn{
   position: absolute;
-  right: 1%;
-  top: 0;
+  right: 1px;
+  top: 1px;
 }
 
 #Title{
-  margin: auto;
+  top: 50px;
+  display: block;
+  text-align: center;
+  margin:auto;
+  color: #5f6368;
 }
 
 #UserName{
   position: absolute;
-  right: 1%;
+  right: 0.25%;
   top: 4%;
 }
 
-#WriteButton{
-  margin-left: 2px;
-  border: 1px solid;
-  border-radius: 5%;
-  height: 100%;
-}
-
-#WriteButton:hover{
-  cursor: pointer;
-}
-
-.input{
+.input-field{
+  margin-top: 15px;
   margin-bottom: 25px;
   height: 2vh;
 
 }
 
-#ListText{
+#Add-Item{
+  background-color: aliceblue;
+  margin-top: 15px;
+  margin-bottom: 10%;
   height: 100%;
- /* background-color: rgb(255, 249, 249);*/
-  
-  border-bottom: 15% solid black;
+  width: 40%;
+  border-bottom: 10% black;
 
 }
 
+.EntireList{
+  min-height: 500px;
+  height: 100%;
+  margin: auto;
+  width:50%;
+  background-color: rgb(243, 234, 217);
+}
